<resources>
    <string name="app_name">SimTraderGPW</string>

    <!--Login / Sign up-->
    <string name="btn_login">Zaloguj</string>
    <string name="login">Login</string>
    <string name="email">Adres e-mail</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="singup">Nie masz konta? Utwórz je tutaj!</string>
    <string name="cancel">Anuluj</string>
    <string name="signup_btn">Utwórz konto!</string>

    <!--Wallet-->
    <string name="wallet_details">Szczegóły portfela</string>
    <string name="wallet">Portfel</string>
    <string name="owned_stocks">Posiadane papiery</string>
    <string name="wallet_value">Wartość porfela:</string>
    <string name="money">Środki pieniężne:</string>
    <string name="owned_stocks_value">Wartość papierów:</string>
    <string name="loans_colon">Kredyty:</string>
    <string name="loans">Kredyty</string>

    <!--Transactions history-->
    <string name="transactions">Transakcje</string>
    <string name="transactions_history">Historia transakcji</string>

    <!--Single company transactions history-->
    <string name="invested_colon">Zainwestowano:</string>
    <string name="balance_colon">Bilans:</string>
    <string name="sold_colon">Sprzedano:</string>

    <!--Profile-->
    <string name="profile">Profil</string>
    <string name="wallet_value_graph">Wykres wartości portfela</string>
    <string name="stock_value_graph">Wykres wartości posiadanych akcji</string>
    <string name="show_more">Pokaż więcej</string>
    <string name="stats">Statystyki</string>
    <string name="ranking">Ranking</string>
    <string name="reset_progress">Resetuj postępy</string>
    <string name="reset_progress_dialog">Uwaga! Czy na pewno chcesz zresetować postępy? Tej operacji nie można cofnąć.</string>
    <string name="reset_progress_toast">Zresetowano postępy</string>

    <!--Loans-->
    <string name="sum_of_active_loans_colon">Suma bieżących kredytów:</string>
    <string name="interest_value_colon">W tym odsetki:</string>
    <string name="active_loans">Aktywne pożyczki</string>
    <string name="new_loan">Nowa pożyczka</string>
    <string name="payment_date_colon">Termin spłaty:</string>
    <string name="cannot_take_new_loan_unless_old_is_paid">Aby zaciągnąć nową pożyczkę musisz najpierw spłacić poprzednią</string>
    <string name="interests_colon">Oprocentowanie: </string>
    <string name="take_loan">Zaciągnij pożyczkę</string>
    <string name="pay_loan">Spłać pożyczkę</string>
    <string name="take_loan_message_1">Czy chcesz zaciągnąć pożyczkę na kwotę </string>
    <string name="take_loan_message_2"> PLN? Termin płatności:</string>
    <string name="take_loan_message_3">dni.</string>
    <string name="pay_loan_message_1">Spłacić pożyczkę na sumę</string>
    <string name="pay_loan_message_2">PLN?</string>

    <!--Validation messages-->
    <string name="incorrect_email_structure">Niepoprawny adres e-mail.</string>
    <string name="password_too_short">Hasło musi zawierać conajmniej 5 znaków.</string>
    <string name="incorrect_password_structure">Hasło musi zawierać conajmniej jedną cyfrę i literę.</string>
    <string name="empty_field">To pole jest wymagane.</string>
    <string name="field_too_short">Wprowadź więcej znaków.</string>
    <string name="wrong_credentials">Zły login lub hasło.</string>
    <string name="different_passwords">Podane hasła nie są identyczne.</string>
    <string name="email_occupied">Ten email jest już zajęty.</string>
    <string name="login_occupied">Ta nazwa użytkownika jest już zajęta.</string>

    <!--WIG 20-->
    <string name="stack_quotes">Notowania</string>
    <string name="name">Nazwa</string>
    <string name="ticker">Ticker</string>
    <string name="last">Kurs</string>
    <string name="last_colon">Kurs:</string>
    <string name="percentage_change">Zmiana w %</string>
    <string name="quantity">Ilość</string>
    <string name="estimated_value">Szacowana wartość</string>
    <string name="owned_quantity_colon">Ilość w portfelu:</string>
    <string name="company_details">Szczegóły spółki</string>
    <string name="buy">Kupno</string>
    <string name="sell">Sprzedaż</string>

    <!--Currencies-->
    <string name="pln_sufix">PLN</string>

    <!--Images desciptions-->
    <string name="img_change_desc">Symbol zmiany procentowej (Może być dodatni, ujemny lub neutralny)</string>
    <string name="image_with_brands_logo">Obraz z logo aplikacji</string>

    <!--Other-->
    <string name="converter">Przelicznik: </string>
    <string name="times_symbol">x</string>
    <string name="equality_symbol">=</string>
</resources>