<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <view
        android:id="@+id/act_login_top_beam"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/act_login_logo_backgroud"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/colorDelicateGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_login_top_beam" />

    <ImageView
        android:id="@+id/act_login_image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/image_with_brands_logo"
        app:layout_constraintBottom_toBottomOf="@+id/act_login_logo_backgroud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/act_login_logo_backgroud"
        app:srcCompat="@drawable/simtrader_gpw" />

    <ProgressBar
        android:id="@+id/act_sign_up_circuralProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_login_logo_backgroud" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_login_logo_backgroud"
        app:layout_constraintVertical_bias="0.3">

        <EditText
            android:id="@+id/act_sign_up_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_person_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <TextView
            android:id="@+id/act_sign_up_tv_login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error" />

        <EditText
            android:id="@+id/act_sign_up_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="text"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/act_sign_up_tv_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error" />

        <EditText
            android:id="@+id/act_sign_up_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="password"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <TextView
            android:id="@+id/act_sign_up_tv_password1_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error" />

        <EditText
            android:id="@+id/act_sign_up_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="password"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <TextView
            android:id="@+id/act_sign_up_tv_password2_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/act_sign_up_btn_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:onClick="cancelButton"
                android:text="@string/cancel"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/act_sign_up_btn_confirm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:onClick="signUpButton"
                android:text="@string/signup_btn"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>